--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Github page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Our Menu</h1>
