--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Github</title>
+    <title>Github pg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://github.com/Struth-129/Coursera/blob/main/module2-solution/css/style.css">
   </head>
   <body>
     <h1>Our Menu</h1>
