--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Github pg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Our Menu</h1>
